deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    role: webhook-admission-controller
  name: internallb-webhook-admission-controller
spec:
  containers:
    - name: webhook
      image: lachlanevenson/internallb-webhook-admission-controller:1.9
      imagePullPolicy: Always
      ports:
        - containerPort: 8000
