deployment/admissionregistration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: internallb-webhook-admission-controller
webhooks:
- clientConfig:
    caBundle: 
    service:
      name: internallb-webhook-admission-controller
      namespace: default
  failurePolicy: Ignore
  name: internallb-webhook-admission-controller.k8s.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - services
